Fix #3 style issue of overflow scrollbar on windows chrome

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -33,7 +33,8 @@ body {
 
 .header__nav {
   white-space: nowrap;
-  overflow: auto;
+  overflow-y: hidden;
+  overflow-x: auto;
   margin-top: 12px;
 }
 
